--- a/src/main/resources/templates/addreview.html
+++ b/src/main/resources/templates/addreview.html
@@ -4,12 +4,91 @@
 	<title></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+	<!-- Font Awesome by Dave Gandy - http://fontawesome.io -->
+	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"> 
+	<style>
+		/* Pure CSS Star Rating Widget by James Barnett - http://jamesbarnett.me */
+		fieldset, label { margin: 0; padding: 0; }
+		body{ margin: 20px; }
+		h1 { font-size: 1.5em; margin: 10px; }
+		.rating{
+		  border: none;
+		  float: left;
+		}
+		
+		.rating > input { display: none; } 
+		.rating > label:before { 
+		  margin: 5px;
+		  font-size: 1.25em;
+		  font-family: FontAwesome;
+		  display: inline-block;
+		  content: "\f005";
+		}
+		
+		.rating > .half:before { 
+		  content: "\f089";
+		  position: absolute;
+		}
+		
+		.rating > label { 
+		  color: #ddd; 
+		 float: right; 
+		}
+		
+		.rating > input:checked ~ label, /* show gold star when clicked */
+		.rating:not(:checked) > label:hover, /* hover current star */
+		.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+		
+		.rating > input:checked + label:hover, /* hover current star when changing rating */
+		.rating > input:checked ~ label:hover,
+		.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+		.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+	</style>
 </head>
 
 <body>
-	<h1></h1>
-	<div>
-		
-	</div>
+	<h1>Write a review</h1>
+	<form th:object="${review}" th:action="@{save}" action="#" method="post">
+		<div>
+			<label>Click a star to rate</label>
+			<fieldset class="rating">
+			    <input type="radio" id="star5" name="rating" value="5" th:field="*{rating}" /><label class = "full" for="star5"></label>
+			    <input type="radio" id="star4" name="rating" value="4" th:field="*{rating}" /><label class = "full" for="star4"></label>
+			    <input type="radio" id="star3" name="rating" value="3" th:field="*{rating}" /><label class = "full" for="star3"></label>
+			    <input type="radio" id="star2" name="rating" value="2" th:field="*{rating}" /><label class = "full" for="star2"></label>
+			    <input type="radio" id="star1" name="rating" value="1" th:field="*{rating}" /><label class = "full" for="star1"></label>
+			</fieldset>
+		</div>
+		<div>
+			<label>Click a price to rate</label>
+			<fieldset class="rating">
+				<input type="radio" id="price1" name="rating" value="1" th:field="*{price}" /><label class = "full" for="price1"></label>
+			    <input type="radio" id="price2" name="rating" value="2" th:field="*{price}" /><label class = "full" for="price2"></label>
+			    <input type="radio" id="price3" name="rating" value="3" th:field="*{price}" /><label class = "full" for="price3"></label>
+			    <input type="radio" id="price4" name="rating" value="4" th:field="*{price}" /><label class = "full" for="price4"></label>
+			</fieldset>
+		</div>
+		<div>
+			<label>Restaurant:</label>
+			<input type="text" name="restaurant" th:field="*{restaurant.name}" /> 
+		</div>
+		<div>
+			<label>Title:</label>
+			<input type="text" name="title" th:field="*{title}" /> 
+		</div>
+		<div>
+			<label>Date of Creation:</label>
+			<input type="date" name="date" th:field="*{reviewDate}"/>
+		</div>
+		<div class="form-group">
+    		<label for="reviewText">Review</label>
+    		<textarea class="form-control" id="review" rows="3" th:field="*{review}" ></textarea>
+  		</div>
+  		<div class="form-group">
+    		<label for="filePicture">Add a picture</label>
+    		<input type="file" class="form-control-file" id="exampleFormControlFile1" />
+  		</div>
+  		<input type="submit" class="btn btn-success" value="Submit Review"></input>
+	</form>
 </body>
 </html>
