--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -35,6 +35,10 @@
 				<p th:if="${#fields.hasErrors('passwordCheck')}" th:errors="*{passwordCheck}">Password Match Error</p>	
 			</div>
 			<div>
+				<label> Role <input type="text" th:field="*{role}" class="form-control"/></label>
+				<p th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Role Error</p>	
+			</div>
+			<div>
 				<label> Address :<input type="text" th:field="*{address}" class="form-control"/></label>
 				<p th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Address Error</p>	
 			</div>
