--- a/src/main/resources/templates/addreview.html
+++ b/src/main/resources/templates/addreview.html
@@ -82,7 +82,7 @@
 		</div>
 		<div class="form-group">
     		<label for="reviewText">Review</label>
-    		<textarea class="form-control" id="review" rows="3" th:field="*{review}" ></textarea>
+    		<textarea class="form-control" id="reviewText" rows="3" th:field="*{reviewText}" ></textarea>
   		</div>
   		<div class="form-group">
     		<label for="filePicture">Add a picture</label>
