--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -16,21 +16,23 @@
 		<table class="table table-striped">
 			<tr>
 				<th>Title</th>
-				<th>Author</th>
 				<th>Restaurant</th>
+				<th>Rating</th>
+				<th>Price</th>
 				<th>City</th>
 				<th>Date</th>
-				<th>Rating</th>
+				<th>Author</th>
 				<th></th>
 				<th></th>
 			</tr>
 			<tr th:each = "review : ${reviews}">
 				<td th:text="${review.title}"></td>
-				<td th:text="${review.user.username}"></td>
 				<td th:text="${review.restaurant.name}"></td>
+				<td th:text="${review.rating}"></td>
+				<td th:text="${review.price}"></td>
 				<td th:text="${review.restaurant.city}"></td>
 				<td th:text="${review.reviewDate}"></td>
-				<td th:text="${review.rating}"></td>
+				<td th:text="${review.user.username}"></td>
 				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${review.id})}" class="btn btn-danger">Delete</a></td>
 				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/edit/{id}(id=${review.id})}" class="btn btn-primary">Edit</a></td>
 			</tr>
