--- a/src/main/resources/templates/addreview.html
+++ b/src/main/resources/templates/addreview.html
@@ -50,6 +50,13 @@
 	<h1>Write a review</h1>
 	<form th:object="${review}" th:action="@{save}" action="#" method="post">
 		<div>
+			<label>Author:</label>
+			<select id="restlist" th:field="*{username}" class="custom-select" style="width:115px">
+				<option th:value="${#httpServletRequest.remoteUser}" th:text="yourself"></option>
+				<option th:value="Anonymous" th:text="anonymously"></option>
+			</select>
+		</div>
+		<div>
 			<label>Click a star to rate</label>
 			<fieldset class="rating">
 			    <input type="radio" id="star5" name="rating" value="5" th:field="*{rating}" /><label class = "full" for="star5"></label>
@@ -70,11 +77,14 @@
 		</div>
 		<div>
 			<label>Restaurant:</label>
-			<input type="text" name="restaurant" th:field="*{restaurant.name}" /> 
+			<select id="restlist" th:field="*{restaurant}" class="custom-select" style="width:115px">
+				<option th:each="restaurant: ${restaurants}" th:value="${restaurant.restaurantId}" th:text="${restaurant.restaurantName}"></option>
+			</select>
+			<a href="/addrestaurant" class="btn btn-success">Add a Restaurant</a>
 		</div>
 		<div>
 			<label>Title:</label>
-			<input type="text" name="title" th:field="*{title}" /> 
+			<input type="text" placeholder="Add a title..." name="title" th:field="*{title}" /> 
 		</div>
 		<div>
 			<label>Date of Creation:</label>
@@ -82,7 +92,7 @@
 		</div>
 		<div class="form-group">
     		<label for="reviewText">Review</label>
-    		<textarea class="form-control" id="reviewText" rows="3" th:field="*{reviewText}" ></textarea>
+    		<textarea class="form-control" placeholder="Write your review..." id="reviewText" rows="3" th:field="*{reviewText}" ></textarea>
   		</div>
   		<div class="form-group">
     		<label for="filePicture">Add a picture</label>
