--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -27,12 +27,12 @@
 			</tr>
 			<tr th:each = "review : ${reviews}">
 				<td th:text="${review.title}"></td>
-				<td th:text="${review.restaurant.name}"></td>
+				<td th:text="${review.restaurant.restaurantName}"></td>
 				<td th:text="${review.rating}"></td>
 				<td th:text="${review.price}"></td>
 				<td th:text="${review.restaurant.city}"></td>
 				<td th:text="${review.reviewDate}"></td>
-				<td th:text="${review.user.username}"></td>
+				<td th:text="${review.username}"></td>
 				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${review.id})}" class="btn btn-danger">Delete</a></td>
 				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/edit/{id}(id=${review.id})}" class="btn btn-primary">Edit</a></td>
 			</tr>
