--- a/src/main/resources/templates/editrestaurant.html
+++ b/src/main/resources/templates/editrestaurant.html
@@ -24,7 +24,8 @@
 	  </form>
 	</nav>
 	<h1>Add a restaurant</h1>
-	<form th:object="${restaurant}" th:action="@{save}" action="#" method="post">
+	<form th:object="${restaurant}" th:action="@{../save}" action="#" method="post">
+		<input type="hidden" th:field="*{id}" class="form-control"/>
 		<div>
 			<label>Restaurant Name:</label>
 			<input type="text" placeholder="Add the restaurants name" name="restaurantName" th:field="*{restaurantName}" /> 
