--- a/src/main/resources/templates/editreview.html
+++ b/src/main/resources/templates/editreview.html
@@ -47,9 +47,25 @@
 </head>
 
 <body>
-	<h1>Write a review</h1>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <a class="navbar-brand" th:href="@{/reviews}">Buffet Reviews</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	    <div class="navbar-nav">
+	      <a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span class="sr-only">(current)</span></a>
+	      <a class="nav-item nav-link" th:href="@{/restaurants}">Restaurants</a>
+	    </div>
+	  </div>
+	  <span class="navbar-text" th:inline="text">Logged in as [[${#httpServletRequest.remoteUser}]]!</span>
+	  <form th:action="@{/logout}" method="post">
+		<input type="submit" class="btn btn-sm btn-outline-secondary" value="Sign Out"/>
+	  </form>
+	</nav>
+	<h1>Edit review</h1>
 	<form th:object="${review}" th:action="@{../save}" action="#" method="post">
-	<input type="hidden" th:field="*{id}" class="form-control"/>
+		<input type="hidden" th:field="*{id}" class="form-control"/>
 		<div>
 			<label>Click a star to rate</label>
 			<fieldset class="rating">
