--- a/src/main/resources/templates/addrestaurant.html
+++ b/src/main/resources/templates/addrestaurant.html
@@ -24,7 +24,7 @@
 	  </form>
 	</nav>
 	<h1>Add a restaurant</h1>
-	<form th:object="${restaurant}" th:action="@{save}" action="#" method="post">
+	<form th:object="${restaurant}" th:action="@{saveRestaurant}" action="#" method="post">
 		<div>
 			<label>Restaurant Name:</label>
 			<input type="text" placeholder="Add the restaurants name" name="restaurantName" th:field="*{restaurantName}" /> 
@@ -62,7 +62,7 @@
     		<label for="filePicture">Add a picture</label>
     		<input type="file" class="form-control-file" id="exampleFormControlFile1" />
   		</div>
-  		<input type="submit" class="btn btn-success" value="Submit Review"></input>
+  		<input type="submit" class="btn btn-success" value="Submit Restaurant"></input>
 	</form>
 </body>
 </html>
