--- a/src/main/resources/templates/editreview.html
+++ b/src/main/resources/templates/editreview.html
@@ -63,9 +63,14 @@
 		<input type="submit" class="btn btn-sm btn-outline-secondary" value="Sign Out"/>
 	  </form>
 	</nav>
+	
 	<h1>Edit review</h1>
 	<form th:object="${review}" th:action="@{../save}" action="#" method="post">
 		<input type="hidden" th:field="*{id}" class="form-control"/>
+		<div>
+			<label>Author:</label>
+			<input type="text" name="user" th:field="*{username}" />
+		</div>
 		<div>
 			<label>Click a star to rate</label>
 			<fieldset class="rating">
@@ -93,7 +98,7 @@
 		</div>
 		<div>
 			<label>Title:</label>
-			<input type="text" name="title" th:field="*{title}" /> 
+			<input type="text" name="title" th:field="*{title}" />
 		</div>
 		<div>
 			<label>Date of Creation:</label>
@@ -102,10 +107,6 @@
 		<div class="form-group">
     		<label for="reviewText">Review</label>
     		<textarea class="form-control" id="reviewText" rows="3" th:field="*{reviewText}" ></textarea>
-  		</div>
-  		<div class="form-group">
-    		<label for="filePicture">Add a picture</label>
-    		<input type="file" class="form-control-file" id="exampleFormControlFile1" />
   		</div>
   		<input type="submit" class="btn btn-success" value="Submit Review"></input>
 	</form>
