--- a/src/main/resources/templates/restaurants.html
+++ b/src/main/resources/templates/restaurants.html
@@ -24,7 +24,7 @@
 	  </form>
 	</nav>
 	<div>
-		<table class="table table-striped">
+		<table class="table table-striped table-hover">
 			<thead class="thead-dark">
 				<tr>
 					<th>Name</th>
