--- a/src/main/resources/templates/showreview.html
+++ b/src/main/resources/templates/showreview.html
@@ -5,7 +5,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<!-- Font Awesome by Dave Gandy - http://fontawesome.io -->
-	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"> 
+	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+	
+	<!-- here map api -->
+	<link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1549984893" />
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+	
 </head>
 
 <body>
@@ -28,9 +36,9 @@
 	
 	<h1 th:text="${review.title}"></h1>
 	
-	<p th:text="${review.author}"></p>
-	
 	<p th:text="${review.reviewDate}"></p>
+	
+	<p th:text="${review.username}"></p>
     
     <p th:if="${review.rating} == 5">
 		<span class="fa fa-star checked"></span>
@@ -96,5 +104,141 @@
 	
 	<p th:text="${review.reviewText}"></p>
 	
+	<div id="map" style="position:absolute; width:60%; height:50%; background:grey" ></div>
+	<div id="panel" style="position:absolute; width:49%; left:51%; height:100%; background:inherit" ></div>
+	
+	<script type="text/javascript" charset="UTF-8">
+		function geocode(platform) {
+			var geocoder = platform.getGeocodingService(), geocodingParameters = {
+				searchText : '${review.restaurant.address} ${review.restaurant.postcode} ${review.restaurant.city} ${review.restaurant.country}',
+				jsonattributes : 1
+			};
+
+			geocoder.geocode(geocodingParameters, onSuccess, onError);
+		}
+
+		function onSuccess(result) {
+			var locations = result.response.view[0].result;
+
+			addLocationsToMap(locations);
+			addLocationsToPanel(locations);
+		}
+
+		function onError(error) {
+			alert('Ooops!');
+		}
+
+		var platform = new H.service.Platform({
+			app_id: 'hLsMrKhE2iRvZDBuc6Zh',
+			app_code: '3Adnnp4pvne2ab5_FPqvnQ',
+			useHTTPS : true
+		});
+		var pixelRatio = window.devicePixelRatio || 1;
+		var defaultLayers = platform.createDefaultLayers({
+			tileSize : pixelRatio === 1 ? 256 : 512,
+			ppi : pixelRatio === 1 ? undefined : 320
+		});
+
+		var map = new H.Map(document.getElementById('map'),
+				defaultLayers.normal.map, {
+					center : {
+						lat : 60.1712,
+						lng : 24.9327
+					},
+					zoom : 15,
+					pixelRatio : pixelRatio
+				});
+
+		var locationsContainer = document.getElementById('panel');
+
+		var behavior = new H.mapevents.Behavior(new H.mapevents.MapEvents(map));
+
+		var ui = H.ui.UI.createDefault(map, defaultLayers);
+
+		var bubble;
+
+		function openBubble(position, text) {
+			if (!bubble) {
+				bubble = new H.ui.InfoBubble(position, {
+					content : text
+				});
+				ui.addBubble(bubble);
+			} else {
+				bubble.setPosition(position);
+				bubble.setContent(text);
+				bubble.open();
+			}
+		}
+
+		function addLocationsToPanel(locations) {
+
+			var nodeOL = document.createElement('ul'), i;
+
+			nodeOL.style.fontSize = 'small';
+			nodeOL.style.marginLeft = '5%';
+			nodeOL.style.marginRight = '5%';
+
+			for (i = 0; i < locations.length; i += 1) {
+				var li = document.createElement('li'), divLabel = document
+						.createElement('div'), address = locations[i].location.address, content = '<strong style="font-size: large;">'
+						+ address.label + '</strong></br>';
+				position = {
+					lat : locations[i].location.displayPosition.latitude,
+					lng : locations[i].location.displayPosition.longitude
+				};
+
+				content += '<strong>houseNumber:</strong> '
+						+ address.houseNumber + '<br/>';
+				content += '<strong>street:</strong> ' + address.street
+						+ '<br/>';
+				content += '<strong>district:</strong> ' + address.district
+						+ '<br/>';
+				content += '<strong>city:</strong> ' + address.city + '<br/>';
+				content += '<strong>postalCode:</strong> ' + address.postalCode
+						+ '<br/>';
+				content += '<strong>county:</strong> ' + address.county
+						+ '<br/>';
+				content += '<strong>country:</strong> ' + address.country
+						+ '<br/>';
+				content += '<br/><strong>position:</strong> '
+						+ Math.abs(position.lat.toFixed(4))
+						+ ((position.lat > 0) ? 'N' : 'S') + ' '
+						+ Math.abs(position.lng.toFixed(4))
+						+ ((position.lng > 0) ? 'E' : 'W');
+
+				divLabel.innerHTML = content;
+				li.appendChild(divLabel);
+
+				nodeOL.appendChild(li);
+			}
+
+			locationsContainer.appendChild(nodeOL);
+		}
+
+		function addLocationsToMap(locations) {
+			var group = new H.map.Group(), position, i;
+
+			for (i = 0; i < locations.length; i += 1) {
+				position = {
+					lat : locations[i].location.displayPosition.latitude,
+					lng : locations[i].location.displayPosition.longitude
+				};
+				marker = new H.map.Marker(position);
+				marker.label = locations[i].location.address.label;
+				group.addObject(marker);
+			}
+
+			group.addEventListener('tap', function(evt) {
+				map.setCenter(evt.target.getPosition());
+				openBubble(evt.target.getPosition(), evt.target.label);
+			}, false);
+
+			map.addObject(group);
+			map.setCenter(group.getBounds().getCenter());
+		}
+
+		geocode(platform);
+	</script>
+
 </body>
 </html>
